Fix grid gaps, apply them to price cards
Make grid gaps folowing old-style pattern (for IE8). Set gaps through
'l-...-gap' and 'l-...-gap__cell' classes. Set them for price cards.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -77,3 +77,13 @@
   }
 }
   
+/*
+ * Установка расстояний для сетки ценников
+ */
+$price_cards-gap: 0.8em;
+.l-price-cards-gap {
+  margin-right: -$price_cards-gap;
+}
+.l-price-cards-gap__cell {
+  margin: 0 $price_cards_gap $price_cards_gap 0;
+}
