--- a/scss/modules/_price-card.scss
+++ b/scss/modules/_price-card.scss
@@ -5,7 +5,6 @@
 @import "tools/colors";
 
 .price-card {
-  margin: 0.4em;
   min-height: 14em;
   border-radius: 8px;
   background: $color_gray_bg;
